--- a/package.json
+++ b/package.json
@@ -10,7 +10,10 @@
     "jquery": "~3.4.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^8.0.7",
+    "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
+    "react-simplemde-editor": "^5.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -36,5 +39,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-router-dom": "^5.3.3"
   }
 }
