--- a/package.json
+++ b/package.json
@@ -4,6 +4,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@emotion/react": "^11.13.3",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^6.1.4",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -20,6 +23,7 @@
     "react-router-dom": "^5.3.4",
     "react-scripts": "5.0.1",
     "react-simplemde-editor": "^5.2.0",
+    "redux-saga": "^1.3.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
